<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:background="#ffffff"

    tools:context=".workout.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imgS"
        android:layout_width="550dp"
        android:layout_height="250dp"
        android:padding="9dp"
      android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_margin="33dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/welcome" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
android:layout_below="@+id/imgS"
android:layout_centerInParent="true"
 android:padding="1dp"
        android:layout_marginBottom="43dp"
        android:text="@string/login_here"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
android:layout_below="@+id/txtLogo"
android:layout_centerInParent="true"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
android:hint="@string/enter_your_email"
    app:hintTextColor="#000000"
    app:boxStrokeColor="#000000"
    app:boxStrokeWidthFocused="2dp"
app:startIconDrawable="@drawable/ic_email"
    app:startIconTint="#000000"
    app:endIconMode="clear_text"
    app:endIconTint="#000000"
    android:id="@+id/inputEmailsl"

    >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"

         android:textColor="#000000"
        />
</com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"

        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_marginTop="7dp"
        android:hint="@string/enter_your_password"
        app:hintTextColor="#000000"
        android:layout_centerInParent="true"
        app:boxStrokeColor="#000000"
        app:boxStrokeWidthFocused="2dp"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="#000000"
        app:endIconMode="clear_text"
        app:endIconTint="#000000"

        android:layout_below="@id/inputEmailsl"
        android:id="@+id/editLock"

        >

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textColor="#000000"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="7dp"
        android:layout_below="@id/editLock"
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
       android:layout_centerInParent="true"
        android:background="@drawable/round_shape"
        android:text="@string/login"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:text="@string/forgot_password"
        android:textColor="#EC191615"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textReg"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textPass"
android:layout_marginTop="63dp"
        android:layout_centerInParent="true"

        android:text="@string/create_account"
        android:textColor="#EC191615"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
    </ScrollView>
</RelativeLayout>
