<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".habittracker.CreateNewHabitFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >


        <LinearLayout
            android:id="@+id/ll_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="65dp"
                android:layout_marginBottom="12dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_baseline_calendar_today_24"
                android:contentDescription="@string/todo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/select_remainder"
                android:layout_marginBottom="19dp"
                />
            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="390dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/habit_title"
                app:hintTextColor="#000000"
                android:layout_marginBottom="5dp"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_smoking"
                app:startIconTint="#000000"
                app:endIconMode="clear_text"
                app:endIconTint="#000000"
                android:id="@+id/etHabitTitleUpdate"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:textColor="#000000"
                    />
            </com.google.android.material.textfield.TextInputLayout>





            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginBottom="5dp"
                android:layout_width="390dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/give_it_a_short_description"
                app:hintTextColor="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_description"
                app:startIconTint="#000000"
                app:endIconMode="clear_text"
                app:endIconTint="#000000"
                android:id="@+id/etHabitDescriptionUpdate"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:textColor="#000000"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnPickDateUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:backgroundTint="#1A173A"

                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/pick_a_date"
                android:textColor="@android:color/white" />

            <TextView
                android:textColor="#000000"
                android:id="@+id/tvDateSelectedUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/date_not_selected"
                android:textSize="19sp" />

            <Button
                android:id="@+id/btnPickTimeUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:backgroundTint="#1A173A"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/pick_a_time"
                android:textColor="@android:color/white" />

            <TextView
                android:textColor="#000000"
                android:id="@+id/tvTimeSelectedUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/time_not_selected"
                android:textSize="19sp" />

            <LinearLayout
                android:id="@+id/layout_tea_smoking_fastfood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivTeaSelectedUpdate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/tea_selected"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/ivFastFoodSelectedUpdate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/coffe_select" />

                <ImageView
                    android:id="@+id/ivSmokingSelectedUpdate"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/smokin_selcted"
                    android:contentDescription="@string/todo" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">



            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:weightSum="10"
                android:layout_height="match_parent">
                <Button
                    android:layout_weight="5"
                    android:id="@+id/btnConfirmUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:backgroundTint="#1A173A"
                    android:background="@drawable/round_shape"
                    android:text="@string/update"
                    android:textColor="@android:color/white"
                    style="?android:attr/buttonBarButtonStyle" />
                <Button
                    android:layout_weight="5"
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:backgroundTint="#1A173A"
                    android:background="@drawable/round_shape"
                    android:text="@string/delete_habit"
                    android:textColor="@android:color/white"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>