<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".habittracker.CreateNewHabitFragment">




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >


            <LinearLayout
                android:id="@+id/ll_textviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                >
                    <ImageView
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:id="@+id/imageView"

                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:visibility="visible"
                        android:src="@drawable/ic_baseline_alarm_add_24" />



                    <ImageView
                        android:layout_alignParentTop="true"
                        android:layout_centerInParent="true"
                        android:id="@+id/imageView2"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:visibility="invisible"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_alarm_o" />
                    <TextView
                        android:id="@+id/textv"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/imageView2"
                        android:textColor="#101010"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="select your alert:)"
                        />

                </RelativeLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/et_habitTitle"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/habit_title"
                    app:hintTextColor="#000000"
                   android:layout_marginBottom="5dp"
                    app:boxStrokeColor="#000000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_baseline_smoking"
                    app:startIconTint="#000000"
                    app:endIconMode="clear_text"
                    app:endIconTint="#000000"
                    android:id="@+id/inputTitle"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:textColor="#000000"
                        />
                </com.google.android.material.textfield.TextInputLayout>





                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/et_habitTitle"
                    android:layout_marginBottom="5dp"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/give_it_a_short_description"
                    app:hintTextColor="#000000"
                    app:boxStrokeColor="#000000"
                    app:boxStrokeWidthFocused="2dp"
                    app:startIconDrawable="@drawable/ic_baseline_description"
                    app:startIconTint="#000000"
                    app:endIconMode="clear_text"
                    app:endIconTint="#000000"
                    android:id="@+id/etHabitDescription"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:textColor="#000000"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/btnPickDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_shape"
                    android:backgroundTint="#1A173A"

                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/pick_a_date"
                    android:textColor="@android:color/white" />

                <TextView
                    android:textColor="#000000"
                    android:id="@+id/tvDateSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/date_not_selected"
                    android:textSize="19sp" />

                <Button
                    android:id="@+id/btnPickTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/round_shape"
                    android:backgroundTint="#1A173A"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/pick_a_time"
                    android:textColor="@android:color/white" />

                <TextView
                    android:textColor="#000000"
                    android:id="@+id/tvTimeSelected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/time_not_selected"
                    android:textSize="19sp" />

                <LinearLayout
                    android:id="@+id/layout_tea_smoking_fastfood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/todo"
                        android:id="@+id/ivTeaSelected"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/tea_selected" />

                    <ImageView
                        android:id="@+id/ivFastFoodSelected"
                        android:contentDescription="@string/todo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/coffe_select" />

                    <ImageView
                        android:id="@+id/ivSmokingSelected"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:src="@drawable/smokin_selcted"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">



                </RelativeLayout>

                <Button
                    android:id="@+id/btn_confirm_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:backgroundTint="#1A173A"
android:background="@drawable/round_shape"
                    android:text="@string/confirm"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </ScrollView>


    </RelativeLayout>